--- a/myclub_website/events/templates/events/base.html
+++ b/myclub_website/events/templates/events/base.html
@@ -12,11 +12,11 @@
 
 <body>
 {% include 'events/navbar.html' %}
-
+<div class="container">
 {% block content %}
 
 {% endblock %}
-
+</div>
   <script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
 </body>
 
